# gambit

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml  stockfish.txt  tarpaulin.toml  uci.sh
.cargo/: config.toml
assets/audio/: capture.flac  castle.flac  move-check.flac  move-opponent.flac  move-self.flac  promote.flac
assets/images/captures/: generate.py
assets/pieces/: get.sh
assets/tiles/: generate.py
gambit_stockfish/: Cargo.toml  build-from-release.rs  build.rs  build_core.rs  build_utils.rs
src/: cli.rs  main.rs  startup.rs  util.rs  utils.rs  window.rs
src/assets/: mod.rs  pieces.rs  tiles.rs
src/data/: board.rs  game.rs  location.rs  mod.rs  mouse.rs  square.rs  z.rs
src/debug_inspector/: debug_inspector.rs  mod.rs  split_panel.rs
src/debug_inspector/debug_inspector_impl/: gizmos.rs  mod.rs  panes.rs  split_panel.rs  state.rs
src/game/: audio.rs  board.rs  camera.rs  captures.rs  consts.rs  core.rs  eval_bar.rs  game_over.rs  load.rs  menu.rs  mod.rs  mouse.rs  moves.rs  panels.rs  selection.rs  stockfish.rs  ui.rs  utils.rs
src/game/board/: board.rs  captures.rs  elements.rs  highlight_tile.rs  hints.rs  icons.rs  location.rs  mod.rs  moves.rs  pieces.rs  promoter.rs  selection.rs  square.rs  state.rs  tile.rs  ui.rs
src/game/captures/: mod.rs
src/game/menu/: fen_popup.rs  game_menu.rs  mod.rs  state.rs
src/game/menu/fen_popup/: mod.rs  state.rs  view.rs
src/game/mouse/: handler.rs  mod.rs  position.rs  selection.rs
src/systems/: board.rs  mod.rs  mouse.rs  startup.rs
src/utils/: bevy.rs  egui.rs  mod.rs
stockfish_fetch/: Cargo.toml
stockfish_fetch/src/: consts.rs  core.rs  lib.rs
