[package]
name = "gambit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace_logs = []

[profile.dev]
opt-level = 0

[profile.dev.package.'*']
opt-level = 3

[dependencies]
bevy = { version = "0.10", features = ["filesystem_watcher", "flac"] }
bevy_egui = "0.20"
bevy_startup_tree = "0.2"
bevy-inspector-egui = { version = "0.18", optional = true }
chess = "3.2"
clap = { version = "4.1", features = ["derive", "wrap_help"] }
egui_extras = "0.21"
grid = "0.9"
