[package]
name = "gambit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []
debug-inspector = ["debug", "dep:bevy-inspector-egui"]
trace_logs = []
file_watcher = ["bevy/file_watcher"]

[profile.dev]
opt-level = 0

[profile.dev.package.'*']
opt-level = 2

[dependencies]
bevy = { version = "0.12", features = ["flac"] }
bevy_egui = "0.23"
bevy_startup_tree = "0.4.1"
bevy-inspector-egui = { version = "0.21", optional = true }
chess = "3.2"
clap = { version = "4.1", features = ["derive", "wrap_help"] }
egui_extras = "0.23"
