[package]
name = "gambit_stockfish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
anyhow = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
shell-escape = "0.1"
zip = "0.6"
